--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-native-reanimated": "~1.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
