--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-deck-swiper": "1.5.25",
     "react-native-dotenv": "^0.2.0",
+    "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
-    "react-navigation-tabs": "^2.5.6",
-    "react-native-reanimated": "~1.2.0"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
