--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-gifted-chat": "^0.11.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
