--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-image-picker": "~7.0.0",
     "firebase": "^7.2.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-aws3": "0.0.9",
     "react-native-deck-swiper": "1.5.25",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.6",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.11.3",
     "react-native-reanimated": "~1.2.0",
+    "react-native-s3-upload": "0.0.12",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
