--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.11.3",
+    "react-native-modal": "^11.4.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-s3-upload": "0.0.12",
     "react-native-web": "^0.11.7",
