--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "babel-preset-expo": "^7.0.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0"
   },
   "private": true
 }
